kyverno/manifests/disallow-default-namespace.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-default-namespace
  annotations:
    pod-policies.kyverno.io/autogen-controllers: none
    policies.kyverno.io/title: Disallow Default Namespace in CEL expressions
    policies.kyverno.io/minversion: 1.11.0
    policies.kyverno.io/category: Multi-Tenancy in CEL
    kyverno.io/kubernetes-version: "1.26-1.27"
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/description: >-
      Kubernetes Namespaces are an optional feature that provide a way to segment and
      isolate cluster resources across multiple applications and users. As a best
      practice, workloads should be isolated with Namespaces. Namespaces should be required
      and the default (empty) Namespace should not be used. This policy validates that Pods
      specify a Namespace name other than `default`. Rule auto-generation is disabled here
      due to Pod controllers need to specify the `namespace` field under the top-level `metadata`
      object and not at the Pod template level.
spec:
  validationFailureAction: Enforce
  background: false
  rules:
    - name: validate-namespace
      match:
        any:
          - resources:
              kinds:
                - Pod
              operations:
                - CREATE
      validate:
        cel:
          expressions:
            - expression: "namespaceObject.metadata.name != 'default'"
              message: "Using 'default' namespace is not allowed."
    - name: validate-podcontroller-namespace
      match:
        any:
          - resources:
              kinds:
                - DaemonSet
                - Deployment
                - Job
                - StatefulSet
              operations:
                - CREATE
      validate:
        cel:
          expressions:
            - expression: "namespaceObject.metadata.name != 'default'"
              message: "Using 'default' namespace is not allowed for pod controllers."
